-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 20, 21
-
Component/s: hotspot
Currently, InlineTree::should_inline() and InlineTree::should_not_inline() only read from replay files without the macro guard PRODUCT. That's to say, HotSpot can't playback the exact inlining decisions from replay files in release build.
I think we should build the logic unconditionally. More discussion are in
- relates to
-
JDK-8292561 Make "ReplayCompiles" a diagnostic product switch
-
- Resolved
-