8302004: InlineTree should consult replay file in release build