src/hotspot/share/opto/parse.hpp
@@ -76,12 +76,12 @@ protected:
   bool        should_inline(ciMethod* callee_method,
                             ciMethod* caller_method,
                             int caller_bci,
-                            NOT_PRODUCT_ARG(bool& should_delay)
+                            bool& should_delay,
                             ciCallProfile& profile);
   bool        should_not_inline(ciMethod* callee_method,
                                 ciMethod* caller_method,
                                 int caller_bci,
-                                NOT_PRODUCT_ARG(bool& should_delay)
+                                bool& should_delay,
                                 ciCallProfile& profile);
   bool        is_not_reached(ciMethod* callee_method,
                              ciMethod* caller_method,
